--- a/server/api-module/pom.xml
+++ b/server/api-module/pom.xml
@@ -80,5 +80,15 @@
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
 	</dependency>
+	<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>0.7.5</version>
+		</dependency>
+	<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.2</version>
+		</dependency>
   </dependencies>
 </project>
